tests/es_declare_module/es_declare_module.exp
Error ------------------------------------------------- es_declare_module.js:6:2

Error: es_declare_module.js:6
  6: (num1: string); // Error: number ~> string
      ^^^^ Cannot cast `num1` to string because number [1] is incompatible with string [2].
  References:
    2:   declare var num1: number;
                           ^^^^^^ [1]: number. See lib: flow-typed/declares.js:2
    6: (num1: string); // Error: number ~> string
              ^^^^^^ [2]: string

Error ------------------------------------------------- es_declare_module.js:8:2

Error: es_declare_module.js:8
  8: (str1: number); // Error: string ~> number
      ^^^^ Cannot cast `str1` to number because string [1] is incompatible with number [2].
  References:
    3:   declare var str1: string;
                           ^^^^^^ [1]: string. See lib: flow-typed/declares.js:3
    8: (str1: number); // Error: string ~> number
              ^^^^^^ [2]: number

Error ------------------------------------------------ es_declare_module.js:10:2

Error: es_declare_module.js:10
 10: (CJS_Named: number); // Error: Module ~> number
      ^^^^^^^^^ Cannot cast `CJS_Named` to number because module `CJS_Named` [1] is incompatible with number [2].
  References:
       v---------------------------
    1: declare module "CJS_Named" {
    2:   declare var num1: number;
    3:   declare var str1: string;
    4: }
       ^ [1]: module `CJS_Named`. See lib: flow-typed/declares.js:1
   10: (CJS_Named: number); // Error: Module ~> number
                   ^^^^^^ [2]: number

Error ------------------------------------------------ es_declare_module.js:12:9

Error: es_declare_module.js:12
 12: import {num2} from "CJS_Clobbered"; // Error: No such export!
             ^^^^ Cannot import `num2` because there is no `num2` export in `CJS_Clobbered`.

Error ------------------------------------------------ es_declare_module.js:15:2

Error: es_declare_module.js:15
 15: (numExport: string); // Error: number ~> string
      ^^^^^^^^^ Cannot cast `numExport` to string because number [1] is incompatible with string [2].
  References:
   10:     numExport: number,
                      ^^^^^^ [1]: number. See lib: flow-typed/declares.js:10
   15: (numExport: string); // Error: number ~> string
                   ^^^^^^ [2]: string

Error ------------------------------------------------ es_declare_module.js:18:2

Error: es_declare_module.js:18
 18: ('asdf': numType); // Error: string ~> number
      ^^^^^^ Cannot cast `'asdf'` to `numType` because string [1] is incompatible with number [2].
  References:
   18: ('asdf': numType); // Error: string ~> number
        ^^^^^^ [1]: string
   18: ('asdf': numType); // Error: string ~> number
                ^^^^^^^ [2]: number

Error ------------------------------------------------ es_declare_module.js:20:9

Error: es_declare_module.js:20
 20: import {strHidden} from "ES"; // Error: No such export!
             ^^^^^^^^^ Cannot import `strHidden` because there is no `strHidden` export in `ES`.

Error ------------------------------------------------ es_declare_module.js:23:2

Error: es_declare_module.js:23
 23: (str3: number); // Error: string ~> number
      ^^^^ Cannot cast `str3` to number because string [1] is incompatible with number [2].
  References:
   15:   declare var strHidden: string;
                                ^^^^^^ [1]: string. See lib: flow-typed/declares.js:15
   23: (str3: number); // Error: string ~> number
              ^^^^^^ [2]: number

Error ------------------------------------------------ es_declare_module.js:27:2

Error: es_declare_module.js:27
 27: (num3: string); // Error: number ~> string
      ^^^^ Cannot cast `num3` to string because number [1] is incompatible with string [2].
  References:
   17:   declare export var num3: number;
                                  ^^^^^^ [1]: number. See lib: flow-typed/declares.js:17
   27: (num3: string); // Error: number ~> string
              ^^^^^^ [2]: string

Error ------------------------------------------------ es_declare_module.js:32:2

Error: es_declare_module.js:32
 32: (42: C); // Error: number ~> C
      ^^ Cannot cast `42` to `C` because number [1] is incompatible with `C` [2].
  References:
   32: (42: C); // Error: number ~> C
        ^^ [1]: number
   32: (42: C); // Error: number ~> C
            ^ [2]: `C`

Error ------------------------------------------------ es_declare_module.js:34:2

Error: es_declare_module.js:34
 34: (42: CType); // Error: number ~> CType
      ^^ Cannot cast `42` to `CType` because number [1] is incompatible with `C` [2].
  References:
   34: (42: CType); // Error: number ~> CType
        ^^ [1]: number
   34: (42: CType); // Error: number ~> CType
            ^^^^^ [2]: `C`

Error ------------------------------------------------ es_declare_module.js:36:9

Error: es_declare_module.js:36
 36: import {T} from "ES"; // Error: T is a type import, not a value
             ^ Cannot import the type `T` as a value. Use `import type` instead.

Error ------------------------------------------------ es_declare_module.js:39:2

Error: es_declare_module.js:39
 39: ('asdf': T2); // Error: string ~> number
      ^^^^^^ Cannot cast `'asdf'` to `T2` because string [1] is incompatible with number [2].
  References:
   39: ('asdf': T2); // Error: string ~> number
        ^^^^^^ [1]: string
   39: ('asdf': T2); // Error: string ~> number
                ^^ [2]: number

Error ------------------------------------------------ es_declare_module.js:41:9

Error: es_declare_module.js:41
 41: import {exports as nope} from "ES"; // Error: Not an export
             ^^^^^^^ Cannot import `exports` because there is no `exports` export in `ES`.


Found 14 errors
